# JurisChat_2016_Server

./: .gitignore  CMakeLists.txt  Constants.h  LoginSecurity.cpp  LoginSecurity.h  Message.h  OPCodes.cpp  OPCodes.h  Packet.cpp  Packet.h  PlatformDefines.h  Server.cpp  Server.h  User.cpp  User.h  base64.h  main.cpp
Exceptions/: ElementNotFoundException.h  NotImplementedException.h  PacketTooLongException.h  UserNotFoundException.h
